[gd_scene load_steps=7 format=3 uid="uid://de561b4xif0ds"]

[ext_resource type="Script" uid="uid://dtfjawko27cc1" path="res://DialogueSystem/scripts/dialogue_editor.gd" id="1_08vol"]
[ext_resource type="PackedScene" uid="uid://c84q1bhurmaje" path="res://DialogueSystem/DialogueNode.tscn" id="1_vmf3m"]
[ext_resource type="Theme" uid="uid://bga4dn6xiaw85" path="res://DialogueSystem/meta/InputTextTheme.tres" id="2_3jxqi"]
[ext_resource type="Theme" uid="uid://lebvw2nrujou" path="res://DialogueSystem/ui/Theme_ButtonOneFork.tres" id="2_omscw"]
[ext_resource type="Theme" uid="uid://bh6thbwa30yyu" path="res://DialogueSystem/ui/ThemeButton_NoFork.tres" id="3_x18sg"]
[ext_resource type="Theme" uid="uid://de752qimi48l3" path="res://DialogueSystem/ui/ThemeButton_MultiFork.tres" id="4_gwdfu"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_08vol")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(200, 200)

[node name="NodeEditor" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/NodeEditor"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -300.0
offset_right = 576.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="PanelSelectFile" type="Node2D" parent="Camera2D/NodeEditor/ColorRect"]
visible = false

[node name="FileName" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSelectFile"]
offset_left = 87.0
offset_top = 64.0
offset_right = 373.0
offset_bottom = 106.0
text = "default"

[node name="Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSelectFile"]
offset_left = 2.0
offset_top = 65.0
offset_right = 78.0
offset_bottom = 88.0
text = "File Name"

[node name="SaveButton" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelSelectFile"]
offset_left = 18.0
offset_top = 126.0
offset_right = 228.0
offset_bottom = 179.0
text = "Save"

[node name="LoadButton" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelSelectFile"]
offset_left = 226.0
offset_top = 126.0
offset_right = 436.0
offset_bottom = 179.0
text = "Load"

[node name="NewButton" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelSelectFile"]
offset_left = 50.0
offset_top = 198.0
offset_right = 260.0
offset_bottom = 251.0
text = "New"

[node name="FileNamesBox" type="OptionButton" parent="Camera2D/NodeEditor/ColorRect/PanelSelectFile"]
offset_left = 421.0
offset_top = 54.0
offset_right = 774.0
offset_bottom = 98.0

[node name="Label2" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSelectFile"]
offset_left = 420.0
offset_top = 8.0
offset_right = 818.0
offset_bottom = 54.0
text = "File in list:"

[node name="PanelPickNodeType" type="Node2D" parent="Camera2D/NodeEditor/ColorRect"]
visible = false

[node name="Button DialogueBox" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 26.0
offset_top = 47.0
offset_right = 226.0
offset_bottom = 97.0
theme = ExtResource("2_omscw")
text = "Dialogue Box"

[node name="Button Move Actor" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 26.0
offset_top = 111.0
offset_right = 226.0
offset_bottom = 161.0
theme = ExtResource("2_omscw")
text = "Move to pt"

[node name="Button Sound" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 26.0
offset_top = 175.0
offset_right = 226.0
offset_bottom = 225.0
theme = ExtResource("2_omscw")
text = "Play sound fx"

[node name="Button Send Signal" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 738.0
offset_top = 47.0
offset_right = 938.0
offset_bottom = 97.0
theme = ExtResource("2_omscw")
text = "Send Signal"

[node name="Button Change Scene" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 938.0
offset_top = 47.0
offset_right = 1138.0
offset_bottom = 97.0
theme = ExtResource("3_x18sg")
text = "Change Scene"

[node name="Button Teleport" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 938.0
offset_top = 111.0
offset_right = 1138.0
offset_bottom = 161.0
theme = ExtResource("2_omscw")
text = "Teleport"

[node name="Button Flash" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 734.0
offset_top = 115.0
offset_right = 934.0
offset_bottom = 165.0
theme = ExtResource("2_omscw")
text = "Flash"

[node name="Button Choice" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 290.0
offset_top = 47.0
offset_right = 490.0
offset_bottom = 97.0
theme = ExtResource("4_gwdfu")
text = "Choice Box"

[node name="Butotn Wait" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 290.0
offset_top = 111.0
offset_right = 490.0
offset_bottom = 161.0
theme = ExtResource("2_omscw")
text = "Wait"

[node name="Butotn Music" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 290.0
offset_top = 175.0
offset_right = 490.0
offset_bottom = 225.0
theme = ExtResource("2_omscw")
text = "Play Music"

[node name="Button End" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 506.0
offset_top = 175.0
offset_right = 706.0
offset_bottom = 225.0
theme = ExtResource("3_x18sg")
text = "End Dialogue"

[node name="Button IfThen" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 506.0
offset_top = 47.0
offset_right = 706.0
offset_bottom = 97.0
theme = ExtResource("4_gwdfu")
text = "If/Then/Else"

[node name="Button SetVar2" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_left = 506.0
offset_top = 114.0
offset_right = 706.0
offset_bottom = 164.0
theme = ExtResource("2_omscw")
text = "Modify Var"

[node name="Header" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelPickNodeType"]
offset_right = 40.0
offset_bottom = 23.0
text = "Add command on: (x,y)"

[node name="PanelSetArgs" type="Node2D" parent="Camera2D/NodeEditor/ColorRect"]
visible = false

[node name="Add Node Button" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 984.0
offset_top = 246.0
offset_right = 1151.0
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "Add Node"

[node name="Arg 0 Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_right = 373.0
offset_bottom = 40.0
text = "blah blah blah"

[node name="Arg 0 Text" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_left = 384.0
offset_right = 777.0
offset_bottom = 40.0
theme = ExtResource("2_3jxqi")

[node name="Arg 1 Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_top = 49.0
offset_right = 373.0
offset_bottom = 89.0
text = "blah blah blah"

[node name="Arg 1 Text" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_left = 384.0
offset_top = 48.0
offset_right = 777.0
offset_bottom = 88.0
theme = ExtResource("2_3jxqi")

[node name="Arg 2 Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_top = 97.0
offset_right = 373.0
offset_bottom = 137.0
text = "blah blah blah"

[node name="Arg 2 Text" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_left = 384.0
offset_top = 96.0
offset_right = 777.0
offset_bottom = 136.0
theme = ExtResource("2_3jxqi")

[node name="Arg 3 Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_top = 145.0
offset_right = 373.0
offset_bottom = 185.0
text = "blah blah blah"

[node name="Arg 3 Text" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_left = 384.0
offset_top = 144.0
offset_right = 777.0
offset_bottom = 184.0
theme = ExtResource("2_3jxqi")

[node name="Arg 4 Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_top = 201.0
offset_right = 373.0
offset_bottom = 241.0
text = "blah blah blah"

[node name="Arg 4 Text" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_left = 384.0
offset_top = 200.0
offset_right = 777.0
offset_bottom = 240.0
theme = ExtResource("2_3jxqi")

[node name="Arg 5 Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_top = 257.0
offset_right = 373.0
offset_bottom = 297.0
text = "blah blah blah"

[node name="Arg 5 Text" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSetArgs"]
offset_left = 384.0
offset_top = 256.0
offset_right = 777.0
offset_bottom = 296.0
theme = ExtResource("2_3jxqi")

[node name="PanelSwapNode" type="Node2D" parent="Camera2D/NodeEditor/ColorRect"]

[node name="Swap Node Button" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelSwapNode"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 984.0
offset_top = 246.0
offset_right = 1151.0
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "Swap Node"

[node name="Cancel Button" type="Button" parent="Camera2D/NodeEditor/ColorRect/PanelSwapNode"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 984.0
offset_top = 174.0
offset_right = 1151.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "Cancel"

[node name="Root Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSwapNode"]
offset_right = 373.0
offset_bottom = 40.0
text = "Current nodeL 0, 0"

[node name="Arg 1 Label" type="Label" parent="Camera2D/NodeEditor/ColorRect/PanelSwapNode"]
offset_top = 49.0
offset_right = 373.0
offset_bottom = 89.0
text = "Swap with:"

[node name="X Text" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSwapNode"]
offset_left = 160.0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 88.0
theme = ExtResource("2_3jxqi")
text = "0"

[node name="Y Text" type="TextEdit" parent="Camera2D/NodeEditor/ColorRect/PanelSwapNode"]
offset_left = 256.0
offset_top = 48.0
offset_right = 336.0
offset_bottom = 88.0
theme = ExtResource("2_3jxqi")
text = "0"

[node name="DialogueNode0,0" parent="." instance=ExtResource("1_vmf3m")]
root = NodePath("..")

[connection signal="text_changed" from="Camera2D/NodeEditor/ColorRect/PanelSelectFile/FileName" to="." method="OnChangeTextBox"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelSelectFile/SaveButton" to="." method="OnSaveButtonPressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelSelectFile/LoadButton" to="." method="OnLoadButtonPressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelSelectFile/NewButton" to="." method="OnNewFilePressed"]
[connection signal="item_selected" from="Camera2D/NodeEditor/ColorRect/PanelSelectFile/FileNamesBox" to="." method="_on_file_names_box_item_selected"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button DialogueBox" to="." method="_on_button_dialogue_box_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button Move Actor" to="." method="_on_button_move_actor_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button Sound" to="." method="_on_button_sound_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button Send Signal" to="." method="_on_button_send_signal_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button Change Scene" to="." method="_on_button_change_scene_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button Teleport" to="." method="_on_button_teleport_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button Flash" to="." method="_on_button_flash_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button Choice" to="." method="_on_button_choice_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Butotn Wait" to="." method="_on_butotn_wait_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Butotn Music" to="." method="_on_butotn_music_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button End" to="." method="_on_button_end_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button IfThen" to="." method="_on_button_if_then_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelPickNodeType/Button SetVar2" to="." method="_on_button_set_var_2_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelSetArgs/Add Node Button" to="." method="AddDialogueNode"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelSwapNode/Swap Node Button" to="." method="_on_swap_node_button_pressed"]
[connection signal="pressed" from="Camera2D/NodeEditor/ColorRect/PanelSwapNode/Cancel Button" to="." method="_on_cancel_button_pressed"]
